--- a/src/mainboard/sunw/ultra40m2_fam10/Kconfig
+++ b/src/mainboard/sunw/ultra40m2_fam10/Kconfig
@@ -9,11 +9,13 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SOUTHBRIDGE_NVIDIA_MCP55
 	select HT_CHAIN_DISTRIBUTE
 	select MCP55_USE_NIC
-	select SUPERIO_WINBOND_W83627HF
+	select MCP55_USE_AZA
+	select SUPERIO_SMSC_DME1737
 	select PARALLEL_CPU_INIT
 	select HAVE_OPTION_TABLE
-	select HAVE_PIRQ_TABLE
+	#select HAVE_PIRQ_TABLE
 	select HAVE_MP_TABLE
+	select HAVE_ACPI_TABLES
 	select LIFT_BSP_APIC_ID
 	select BOARD_ROMSIZE_KB_1024
 	select ENABLE_APIC_EXT_ID
@@ -34,6 +36,10 @@ config APIC_ID_OFFSET
 	hex
 	default 0x0
 
+config MCP55_NUM
+	int
+	default 2
+
 config MAINBOARD_PART_NUMBER
 	string
 	default "Ultra 40 M2 (Fam10)"
@@ -48,7 +54,7 @@ config MAX_PHYSICAL_CPUS
 
 config HT_CHAIN_UNITID_BASE
 	hex
-	default 0x1
+	default 0x0
 
 config HT_CHAIN_END_UNITID_BASE
 	hex
@@ -59,6 +65,10 @@ config IRQ_SLOT_COUNT
 	default 11
 
 config MCP55_PCI_E_X_0
+	int
+	default 1
+
+config MCP55_PCI_E_X_1
 	int
 	default 1
 
